# lighthouse

./: .env.example  .gitignore  .pip-audit-ignores.txt  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  TODO.md  config.example.yaml  config.yaml.example  pyproject.toml
.gitea/workflows/: ci.yml  deploy-staging.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
lighthouse/: __init__.py  cli.py  config.py  coordinator.py  core.py  daemon.py  gitea_1.24_api_endpoints.md  logging_config.py  platform.py  plugins.py  registry.py  state.py
lighthouse/evaluators/: __init__.py  pattern_match.py  sequential_growth.py  state_change.py  threshold.py
lighthouse/notifiers/: __init__.py  console.py  email.py  pushover.py  slack.py  webhook.py
lighthouse/observers/: __init__.py  log_pattern.py  metric.py  service.py  stateful_log_pattern.py
lighthouse/triggers/: __init__.py  file_event.py  manual.py  process_event.py  temporal.py  webhook.py
scripts/: check-actions-ui.sh  check-ci.sh  check-runner.sh  diagnose-ci.sh  fix-fstring-logging.py  generate-api-key.py  run-ci-locally.py  run-ci-locally.sh
templates/: base.html  index.html  notifiers.html  watchers.html
tests/: ARCHITECTURE.md  README.md  __init__.py  conftest.py  test_config.py  test_dynamic_imports.py  test_evaluators.py  test_integration.py  test_notifiers.py  test_observers.py  test_pushover_live.py  test_registry.py  test_state.py  test_triggers.py
